--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ p {
     }
 
     .card-layout-mobile {
+        margin-top: 1000px;
         display: flex;
         flex-direction: column;
     }
