--- a/style.css
+++ b/style.css
@@ -94,9 +94,10 @@ p {
 @media only screen and (max-width: 30em){ 
 
     .card-layout-mobile {
-        margin-top: 700px;
         display: flex;
         flex-direction: column;
+        margin-top: 700px;
+        margin-bottom: 30px;
     }
     
 }
