--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ p {
         display: flex;
         flex-direction: column;
         margin-top: 700px;
-        margin-bottom: 30px;
+        padding-bottom: 30px;
     }
     
 }
