--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ section {
 .image {
     width: 100%;
     height: 100%;
+    opacity: 70%;
 }
 
 /* card title */
@@ -123,7 +124,6 @@ p {
 
     .card-layout-mobile {
         display: flex;
-        justify-content: center;
         flex-direction: column;
         margin-top: 700px;
     }
