--- a/style.css
+++ b/style.css
@@ -123,10 +123,8 @@ p {
 @media only screen and (max-width: 30em){ 
 
     .card-layout-mobile {
-        display: block;
-        position: relative;
-        left: 50%;
-        right: 50%;
+        display: flex;
+        flex-direction: column;
         margin-top: 700px;
     }
     
